--- a/media/sdoc-editor/locales/en/sdoc-editor.json
+++ b/media/sdoc-editor/locales/en/sdoc-editor.json
@@ -50,7 +50,7 @@
   "Right": "Right",
   "File_saved": "File saved.",
   "File_failed_to_save": "File failed to save.",
-  "Back_to_parent_directory":"Back to parent directory",
+  "Back_to_parent_directory": "Back to parent directory",
   "Edit": "Edit",
   "Copy": "Copy",
   "Copied": "Copied",
@@ -93,7 +93,7 @@
   "New_draft": "New draft",
   "View_draft": "View draft",
   "Publish": "Publish",
-  "This_file_has_a_draft": "This file has a draft.", 
+  "This_file_has_a_draft": "This file has a draft.",
   "Delete": "Delete",
   "Reply": "Reply",
   "Comment": "Comment",
@@ -146,7 +146,7 @@
   "MarkdownLint": {
     "missing_h1": {
       "description": "There is no h1 in the document",
-      "issue" : "Missing h1"
+      "issue": "Missing h1"
     },
     "heading_end_with_colon": {
       "description": "Trailing punctuation in heading should not be a colon",
@@ -162,7 +162,7 @@
     "title": "Keyboard shortcuts",
     "userHelpData": [
       {
-        "shortcutType":"List shortcuts",
+        "shortcutType": "List shortcuts",
         "shortcutData": {
           "Make_list": "Make list",
           "Make_ordered_list": "Make Ordered list",
@@ -170,7 +170,8 @@
           "Insert_child_in_item": "Insert child in item",
           "Increase_depth": "Increase depth"
         }
-      }, {
+      },
+      {
         "shortcutType": "Head shortcuts",
         "shortcutData": {
           "Heading_1": "Heading 1",
@@ -180,7 +181,8 @@
           "Heading_5": "Heading 5",
           "Heading_6": "Heading 6"
         }
-      }, {
+      },
+      {
         "shortcutType": "Code block shortcuts",
         "shortcutData": {
           "Make_code_block": "Make code block",
@@ -188,37 +190,43 @@
           "Escape_code_block": "Escape code block",
           "Insert_indent": "Insert indent"
         }
-      }, {
+      },
+      {
         "shortcutType": "Block quote shortcuts",
         "shortcutData": {
           "Make_Block_quote": "Make Block quote",
           "Escape_Block_quote": "Escape Block quote"
         }
-      }, {
+      },
+      {
         "shortcutType": "Table shortcuts",
         "shortcutData": {
           "Insert_Table_Row": "Insert Table Row",
           "Escape_table": "Escape table"
         }
-      }, {
+      },
+      {
         "shortcutType": "Formula shortcuts",
         "shortcutData": {
           "Insert_Formula": "Insert Formula"
         }
-      }, {
-        "shortcutType":"Inline shortcuts",
+      },
+      {
+        "shortcutType": "Inline shortcuts",
         "shortcutData": {
           "Bold": "Bold",
           "Italic": "Italic",
           "Italic_Bold": "Italic Bold",
           "Inline_code": "Inline code"
         }
-      }, {
+      },
+      {
         "shortcutType": "Save shortcuts",
         "shortcutData": {
           "Save_file": "Save file"
         }
-      }, {
+      },
+      {
         "shortcutType": "Image shortcuts",
         "shortcutData": {
           "Paste_screen_shot": "Paste screen shot",
@@ -267,7 +275,7 @@
   "Are_you_sure_to_delete_this_reply": "Are you sure to delete this reply?",
   "Enter_a_comment": "Enter a comment",
   "Enter_a_reply": "Enter a reply",
-  "Reopen_discussion" : "Adding a reply will reopen this discussion",
+  "Reopen_discussion": "Adding a reply will reopen this discussion",
   "Confirm": "Confirm",
   "View_changes": "View changes",
   "Revision": "Revision",
@@ -392,5 +400,11 @@
   "Insert_caption": "Insert caption",
   "No_collaborators_available": "No_collaborators_available",
   "Find_a_collaborator": "Find a collaborator",
-  "Doc_comments": "Document comments"
+  "Doc_comments": "Document comments",
+  "Tag_not_found": "Tag not found",
+  "Create_a_new_tag": "Create a new tag",
+  "Search_tags": "Search tags",
+  "No_options_available": "Tag not found",
+  "Add_option": "Create a new tag",
+  "Find_an_option": "Search tags"
 }
