update sdoc version and sdoc translate

--- a/media/sdoc-editor/locales/es/sdoc-editor.json
+++ b/media/sdoc-editor/locales/es/sdoc-editor.json
@@ -406,5 +406,6 @@
   "Search_tags": "Search tags",
   "No_options_available": "Tag not found",
   "Add_option": "Cear una nueva etiqueta",
-  "Find_an_option": "Search tags"
+  "Find_an_option": "Search tags",
+  "Copy_link_of_section": "Copy link of section"
 }
