--- a/media/sdoc-editor/locales/zh_CN/sdoc-editor.json
+++ b/media/sdoc-editor/locales/zh_CN/sdoc-editor.json
@@ -406,5 +406,6 @@
   "Search_tags": "查找标签",
   "No_options_available": "标签未找到",
   "Add_option": "新建标签",
-  "Find_an_option": "查找标签"
+  "Find_an_option": "查找标签",
+  "Copy_link_of_section": "拷贝章节的链接"
 }
