--- a/media/sdoc-editor/locales/en/sdoc-editor.json
+++ b/media/sdoc-editor/locales/en/sdoc-editor.json
@@ -379,7 +379,7 @@
   "Tip": "Tip",
   "Rebase_delete_no_change_revision_tip": "Revision has not made any change compared to original document. Do you want to delete this revision?",
   "Has_been_replaced_tip": "Document content has been replaced. Please refresh the page.",
-  "Has_been_published_tip": "Revision has been published, Automatically jump to source content after {{ time }} seconds.",
+  "Has_been_published_tip": "Revision published",
   "Has_conflict_before_publish_tip": "There are conflicts in the document, please resolve it before publishing!",
   "Merge_tip": "There are conflicts in the documents. Do you want to merge them?",
   "Has_conflict_before_view_changes_tip": "There are conflicts in the document. Please resolve the conflict before viewing the changes!",
@@ -407,5 +407,6 @@
   "No_options_available": "Tag not found",
   "Add_option": "Create a new tag",
   "Find_an_option": "Search tags",
-  "Copy_link_of_section": "Copy link of section"
+  "Copy_link_of_section": "Copy link of section",
+  "revision": "revision"
 }
