--- a/media/sdoc-editor/locales/zh_CN/sdoc-editor.json
+++ b/media/sdoc-editor/locales/zh_CN/sdoc-editor.json
@@ -379,7 +379,7 @@
   "Tip": "提示",
   "Rebase_delete_no_change_revision_tip": "修订改没有更改，是否删除修订稿？",
   "Has_been_replaced_tip": "文档内容已经被替换，请刷新页面。",
-  "Has_been_published_tip": "修订稿已经发布了，{{ time }} 秒后自动跳转到源文件。",
+  "Has_been_published_tip": "修订稿已发布",
   "Has_conflict_before_publish_tip": "文档有冲突，请解决冲突后再发布！",
   "Merge_tip": "文档有冲突，是否合并？",
   "Has_conflict_before_view_changes_tip": "文档有冲突，请解决冲突后再查看更改！",
@@ -407,5 +407,6 @@
   "No_options_available": "标签未找到",
   "Add_option": "新建标签",
   "Find_an_option": "查找标签",
-  "Copy_link_of_section": "拷贝章节的链接"
+  "Copy_link_of_section": "拷贝章节的链接",
+  "revision": "修订稿"
 }
