--- a/media/sdoc-editor/locales/fr/sdoc-editor.json
+++ b/media/sdoc-editor/locales/fr/sdoc-editor.json
@@ -378,7 +378,7 @@
   "Keep_both_modification": "Keep both modification",
   "Tip": "Tip",
   "Rebase_delete_no_change_revision_tip": "Revision has not made any change compared to original document. Do you want to delete this revision?",
-  "Has_been_replaced_tip": "Document content has been replaced. Please refresh the page.",
+  "Has_been_replaced_tip": "Document content has been replaced. Please refresh the page",
   "Has_been_published_tip": "Revision published",
   "Has_conflict_before_publish_tip": "There are conflicts in the document, please resolve it before publishing!",
   "Merge_tip": "There are conflicts in the documents. Do you want to merge them?",
