--- a/media/sdoc-editor/locales/ru/sdoc-editor.json
+++ b/media/sdoc-editor/locales/ru/sdoc-editor.json
@@ -378,7 +378,7 @@
   "Keep_both_modification": "Сохранить обе модификации",
   "Tip": "Совет",
   "Rebase_delete_no_change_revision_tip": "Редакция не внесла никаких изменений по сравнению с исходным документом. Вы хотите удалить эту редакцию?",
-  "Has_been_replaced_tip": "Содержимое документа было заменено. Обновите страницу.",
+  "Has_been_replaced_tip": "Document content has been replaced. Please refresh the page",
   "Has_been_published_tip": "Revision published",
   "Has_conflict_before_publish_tip": "В документе есть конфликты, разрешите их перед публикацией!",
   "Merge_tip": "В документах есть конфликты. Вы хотите объединить их?",
