--- a/media/sdoc-editor/locales/zh-CN/sdoc-editor.json
+++ b/media/sdoc-editor/locales/zh-CN/sdoc-editor.json
@@ -378,7 +378,7 @@
   "Keep_both_modification": "保留两者更改",
   "Tip": "提示",
   "Rebase_delete_no_change_revision_tip": "修订改没有更改，是否删除修订稿？",
-  "Has_been_replaced_tip": "文档内容已经被替换，请刷新页面。",
+  "Has_been_replaced_tip": "文档内容已经被替换，请刷新页面",
   "Has_been_published_tip": "修订稿已发布",
   "Has_conflict_before_publish_tip": "文档有冲突，请解决冲突后再发布！",
   "Merge_tip": "文档有冲突，是否合并？",
