--- a/media/sdoc-editor/locales/ru/sdoc-editor.json
+++ b/media/sdoc-editor/locales/ru/sdoc-editor.json
@@ -410,5 +410,7 @@
   "revision": "версия",
   "xxx_added_a_new_comment": "{{author}} добавил новый комментарий",
   "xxx_added_a_reply": "{{author}} добавил ответ",
-  "New": "Новый"
+  "New": "Новый",
+  "Table_template": "Table template",
+  "Jump_to_source_doc": "Jump to the source document"
 }
