update sdoc version and sdoc translate

--- a/media/sdoc-editor/locales/en/sdoc-editor.json
+++ b/media/sdoc-editor/locales/en/sdoc-editor.json
@@ -412,5 +412,5 @@
   "xxx_added_a_reply": "{{author}} added a reply",
   "New": "New",
   "Table_template": "Table template",
-  "Jump_to_source_doc": "Jump to the source document"
+  "Jump_to_original_doc": "Jump to the original document"
 }
