--- a/media/sdoc-editor/locales/fr/sdoc-editor.json
+++ b/media/sdoc-editor/locales/fr/sdoc-editor.json
@@ -412,5 +412,6 @@
   "xxx_added_a_reply": "{{author}} added a reply",
   "New": "Créer",
   "Table_template": "Table template",
-  "Jump_to_original_doc": "Jump to the original document"
+  "Jump_to_original_doc": "Jump to the original document",
+  "Selected_text": "Selected text"
 }
